Tried to fix logo image broken on desktop.

--- a/TheBowMan/css/App.css
+++ b/TheBowMan/css/App.css
@@ -21,7 +21,8 @@ html,body
 .load-img
 {
 	display:block;
-	aspect-ratio:16/9;
+	aspect-ratio:1/1;
+	object-fit: cover;
 	width:100%;
 	height:70%;
 }
